fix: correção no swagger e rotas
