# docs/swagger.json
@@ -1,28 +1,474 @@
 {
-    "openapi": "3.0.0",
-    "info":{
-        "title": "API de personagens da série Rick and Morty",
-        "description": "API feita para projeto de estudo",
-        "termosOfService": "",
-        "contact": {
-            "email":"lipe_augustobq@hotmail.com"
-        },
-        "version": "1.0.0"
+    "openapi": "3.0.n",
+    "info": {
+      "title": "rick-and-morty-backend",
+      "description": "Rick and Morty Backend - Complete CRUD",
+      "termsOfService": "",
+      "contact": {
+        "email": "douglasvolcato@gmail.com.br"
+      },
+      "version": "1.0.0"
     },
     "servers": [
-        {
-            "url": "http://localhost:3000/",
-            "description": "API de teste e desenvolvimento"
-        },
-        {
-            "url": "",
-            "description": "API de produção"
-        }
+      {
+        "url": "http://localhost:3000",
+        "description": "Test and development API"
+      },
+      {
+        "url": "https://rick-and-morty-backend-crud.herokuapp.com",
+        "description": "Production API"
+      }
     ],
-    "path": {
-        "/user": {
-            
+    "paths": {
+      "/users/create": {
+        "post": {
+          "summary": "Creates new user",
+          "description": "Route responsable for creating a new user",
+          "tags": [
+            "User"
+          ],
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                },
+                "examples": {
+                  "Users": {
+                    "value": {
+                      "name": "Douglas",
+                      "username": "DouglasVolcato",
+                      "email": "douglasvolcatoe@gmail.com",
+                      "password": "password15",
+                      "photo": "https://avatars.githubusercontent.com/u/106124397?v=4"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "responses": {
+            "201": {
+              "description": "Created",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "$ref": "#/components/schemas/User"
+                  }
+                }
+              }
+            },
+            "400": {
+              "description": "Bad Request"
+            }
+          }
         }
+      },
+      "/users": {
+        "get": {
+          "summary": "Show the users",
+          "description": "Route responsable for showing the users",
+          "tags": [
+            "User"
+          ],
+          "security": [
+            {
+              "token": []
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "array",
+                    "items": {
+                      "$ref": "#/components/schemas/User"
+                    }
+                  }
+                }
+              }
+            },
+            "404": {
+              "description": "Not Found"
+            },
+            "401": {
+              "description": "Unauthorized"
+            }
+          }
+        }
+      },
+      "/auth/login": {
+        "post": {
+          "summary": "Login in Rick and Morty API",
+          "description": "Route responsable for the login",
+          "tags": [
+            "Auth"
+          ],
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                },
+                "examples": {
+                  "User": {
+                    "value": {
+                        "email": "teste@mail.com",
+                        "password": "algumasenha"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "responses": {
+            "200": {
+              "description": "OK",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "properties": {
+                      "token": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "400": {
+              "description": "Bad Request"
+            }
+          }
+        }
+      },
+      "/characters/create-character": {
+        "post": {
+          "summary": "Creates a new character",
+          "description": "Route responsable for creating a new character",
+          "tags": [
+            "Character"
+          ],
+          "security": [
+            {
+              "token": []
+            }
+          ],
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Character"
+                },
+                "examples": {
+                  "Tweet": {
+                    "value": {
+                      "user": "DouglasVolcato",
+                      "name": "Rick Sanchez",
+                      "imageUrl": "https://rickandmortyapi.com/api/character/avatar/1.jpeg"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "responses": {
+            "201": {
+              "description": "Created",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "$ref": "#/components/schemas/Character"
+                  }
+                }
+              }
+            },
+            "400": {
+              "description": "Bad Request"
+            },
+            "401": {
+              "description": "Unauthorized"
+            }
+          }
+        }
+      },
+      "/characters": {
+        "get": {
+          "summary": "Show the characters",
+          "description": "Route responsable for showing the characters",
+          "tags": [
+            "Character"
+          ],
+          "security": [
+            {
+              "token": []
+            }
+          ],
+          "parameters": [
+            {
+              "in": "query",
+              "name": "limit",
+              "type": "string"
+            },
+            {
+              "in": "query",
+              "name": "offset",
+              "type": "string"
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "array",
+                    "items": {
+                      "$ref": "#/components/schemas/Character"
+                    }
+                  }
+                }
+              }
+            },
+            "401": {
+              "description": "Unauthorized"
+            },
+            "404": {
+              "description": "Not Found"
+            }
+          }
+        }
+      },
+      "/characters/find/{id}": {
+        "get": {
+          "summary": "Search a character by id",
+          "description": "Route responsable for searching a character by id",
+          "tags": [
+            "Character"
+          ],
+          "security": [
+            {
+              "token": []
+            }
+          ],
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "description": "Character id for search",
+              "required": true
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "$ref": "#/components/schemas/Character"
+                  }
+                }
+              }
+            },
+            "401": {
+              "description": "Unauthorized"
+            },
+            "404": {
+              "description": "Not Found"
+            }
+          }
+        }
+      },
+      "/characters/update/{id}": {
+        "put": {
+          "summary": "Edit character by id",
+          "description": "Route responsable for editing a character by id",
+          "tags": [
+            "Character"
+          ],
+          "security": [
+            {
+              "token": []
+            }
+          ],
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "description": "Character id for search",
+              "required": true
+            }
+          ],
+          "requestBody": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Character"
+                },
+                "examples": {
+                  "Character": {
+                    "value": {
+                      "name": "Nake Terminator",
+                      "imageUrl": "https://rickandmortyapi.com/api/character/avatar/577.jpeg"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "responses": {
+            "200": {
+              "description": "OK",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "$ref": "#/components/schemas/Character"
+                  }
+                }
+              }
+            },
+            "400": {
+              "description": "Bad Request"
+            }
+          }
+        }
+      },
+      "/characters/delete/{id}": {
+        "delete": {
+          "summary": "Delete a character by id",
+          "description": "Route responsable for deleting a character by id",
+          "tags": [
+            "Character"
+          ],
+          "security": [
+            {
+              "token": []
+            }
+          ],
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "description": "Character id for delete",
+              "required": true
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "$ref": "#/components/schemas/Character"
+                  }
+                }
+              }
+            },
+            "401": {
+              "description": "Unauthorized"
+            },
+            "404": {
+              "description": "Not Found"
+            }
+          }
+        }
+      },
+      "/characters/search": {
+        "get": {
+          "summary": "Search character by name",
+          "description": "Route responsable for searching a character by name",
+          "tags": [
+            "Character"
+          ],
+          "security": [
+            {
+              "token": []
+            }
+          ],
+          "parameters": [
+            {
+              "in": "query",
+              "name": "name",
+              "type": "string",
+              "required": true
+            }
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "object",
+                    "$ref": "#/components/schemas/Character"
+                  }
+                }
+              }
+            },
+            "401": {
+              "description": "Unauthorized"
+            },
+            "404": {
+              "description": "Not Found"
+            }
+          }
+        }
+      }
+    },
+    "components": {
+      "schemas": {
+        "User": {
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "string"
+            },
+            "username": {
+              "type": "string"
+            },
+            "email": {
+              "type": "string"
+            },
+            "password": {
+              "type": "string"
+            },
+            "photo": {
+              "type": "string"
+            }
+          }
+        },
+        "Character": {
+          "type": "object",
+          "properties": {
+            "user": {
+              "type": "string"
+            },
+            "name": {
+              "type": "string"
+            },
+            "imageUrl": {
+              "type": "string"
+            }
+          }
+        }
+      },
+      "securitySchemes": {
+        "token": {
+          "type": "http",
+          "scheme": "bearer",
+          "bearerFormat": "JWT"
+        }
+      }
+    },
+    "security": {
+      "token": []
     }
-
-}
+  }
