# routes/userRoutes.js
@@ -1,4 +1,4 @@
-import { authentication } from "../midlewares/auth.js"
+import { authentication } from "../midlewares/auth.js";
 
 export class UserRoutes {
   constructor(controller, router) {
@@ -7,17 +7,19 @@ export class UserRoutes {
   }
 
   route() {
-    this.router.get("/", authentication, (req, res) => this.userController.find(req, res));
+    this.router.get("/", authentication, (req, res) =>
+      this.userController.find(req, res)
+    );
     this.router.post("/create", (req, res) =>
       this.userController.create(req, res)
     );
-    this.router.patch("/update/:id", (req, res) =>
+    this.router.patch("/update/:id", authentication, (req, res) =>
       this.userController.update(req, res)
     );
-    this.router.delete("/delete/:id", (req, res) =>
+    this.router.delete("/delete/:id", authentication, (req, res) =>
       this.userController.delete(req, res)
     );
-    this.router.get("/find/:id", (req, res) =>
+    this.router.get("/find/:id", authentication, (req, res) =>
       this.userController.findById(req, res)
     );
     return this.router;
